[package]
name = "usl"
version = "0.1.0"
authors = ["Coda Hale <coda.hale@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "usl builds Universal Scalability Law models from sets of observed measurements."
homepage = "https://github.com/codahale/usl-rs"
documentation = "https://docs.rs/usl/"
keywords = ["statistics"]
readme = "README.md"
include = ["Cargo.toml", "benches/**/*.rs", "src/**/*.rs", "tests/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[features]
default = []
cli = ["anyhow", "argh", "csv", "textplots"]

[dependencies]
approx = "0.4"
anyhow = { version = "1.0", optional = true }
argh = { version = "0.1", optional = true }
csv = { version = "1.1", optional = true }
rmpfit = "0.2"
textplots = { version = "0.6", optional = true }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "bench_usl"
harness = false

[[bin]]
name = "usl"
required-features = ["cli"]
