[package]
name = "usl"
version = "0.2.3"
authors = ["Coda Hale <coda.hale@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "usl builds Universal Scalability Law models from sets of observed measurements."
homepage = "https://github.com/codahale/usl-rs"
documentation = "https://docs.rs/usl/"
keywords = ["statistics"]
readme = "README.md"
include = ["Cargo.toml", "benches/**/*.rs", "src/**/*.rs", "tests/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[features]
default = []
cli = ["anyhow", "clap", "csv", "textplots"]

[dependencies]
approx = "0.5"
anyhow = { version = "1.0", optional = true }
clap = { version = "3.0.0-rc.8", optional = true, features = ["derive"] }
csv = { version = "1.1", optional = true }
rmpfit = "0.2"
textplots = { version = "0.8", optional = true, default-features = false }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "bench_usl"
harness = false

[[bin]]
name = "usl"
required-features = ["cli"]
