[package]
name = "usl"
version = "0.3.1-alpha.0"
authors = ["Coda Hale <coda.hale@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "usl builds Universal Scalability Law models from sets of observed measurements."
homepage = "https://github.com/codahale/usl-rs"
documentation = "https://docs.rs/usl/"
keywords = ["statistics"]
readme = "README.md"
include = ["benches/**/*.rs", "src/**/*.rs", "tests/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[features]
default = []
cli = ["anyhow", "clap", "csv", "plotlib"]

[dependencies]
approx = "0.5.1"
anyhow = { version = "1.0.65", optional = true }
clap = { version = "4.0.1", optional = true, features = ["derive"] }
csv = { version = "1.1.6", optional = true }
plotlib = { version = "0.5.1", optional = true }
rmpfit = "0.2.0"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }

[[bench]]
name = "bench_usl"
harness = false

[[bin]]
name = "usl"
required-features = ["cli"]
