[package]
name = "usl"
version = "0.1.0"
authors = ["Coda Hale <coda.hale@gmail.com>"]
edition = "2018"

[dependencies]
levenberg-marquardt = "0.8"
nalgebra = "0.25"
approx = "0.4"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "bench_usl"
harness = false
